fixed wee-partner xml instance name

--- a/wee-partner/index.html
+++ b/wee-partner/index.html
@@ -20,7 +20,7 @@
 <body>
   <script>
       var iframe = document.createElement('iframe');
-      iframe.src = 'https://myworld-ee.kobotoolbox.org/::YYY8?d[%2Fglobal%2Freferral]=Test_partner&iframe=true&'+
+      iframe.src = 'https://myworld-ee.kobotoolbox.org/::YYY8?d[%2FWEE_form%2Freferral]=Test_partner&iframe=true&'+
                       'parentWindowOrigin='+encodeURIComponent(''+window.location);
       document.body.appendChild(iframe);
       window.addEventListener("message", receiveMessage, false);
